--- a/index.html
+++ b/index.html
@@ -1,7 +1,133 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>Alimentos</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<title>Alimentos</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<div class="container-fluid">
+		<div class="titleBox"></div>
+		<h1 class="titleText">Tablas de composicion de alimentos</h1>
+	</div>
+	<div class="container">
+		<div class="card" style="width: 18rem;">
+			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
+				<a href="SemillasDeCerealesYDerivados.html" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+
+		<div class="card" style="width: 18rem;">
+			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
+				<a href="#" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+		<div class="card" style="width: 18rem;">
+			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
+				<a href="#" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+
+		<div class="card" style="width: 18rem;">
+			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
+				<a href="#" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+		<div class="card" style="width: 18rem;">
+			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
+				<a href="#" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+
+		<div class="card" style="width: 18rem;">
+			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
+				<a href="#" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+		<div class="card" style="width: 18rem;">
+			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
+				<a href="#" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+
+		<div class="card" style="width: 18rem;">
+			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
+				<a href="#" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+		<div class="card" style="width: 18rem;">
+			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
+				<a href="#" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+
+		<div class="card" style="width: 18rem;">
+			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
+				<a href="#" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+		<div class="card" style="width: 18rem;">
+			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
+				<a href="#" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+
+		<div class="card" style="width: 18rem;">
+			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
+				<a href="#" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+		<div class="card" style="width: 18rem;">
+			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
+				<a href="#" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+
+		<div class="card" style="width: 18rem;">
+			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
+				<a href="#" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+
+		<div class="card" style="width: 18rem;">
+			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
+				<a href="#" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+	</div>
+
 </body>
 </html>
