--- a/index.html
+++ b/index.html
@@ -15,116 +15,124 @@
 	</div>
 	<div class="container">
 		<div class="card" style="width: 18rem;">
-			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<img src="SemillasDeCereales.jpg" class="card-img-top" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
-				<a href="SemillasDeCerealesYDerivados.html" class="btn btn-primary">Ver Tablas</a>
+				<a href="SemillasDeCereales.html" class="btn btn-primary">Ver Tablas</a>
 			</div>
 		</div>
 
 		<div class="card" style="width: 18rem;">
-			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<img src="SemillasDeLeguminosas.jpg" class="card-img-top" alt="...">
 			<div class="card-body">
-				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
-				<a href="#" class="btn btn-primary">Ver Tablas</a>
+				<h5 class="card-title">Semillas de Leguminosas y Derivados</h5>
+				<a href="SemillasDeLeguminosas.html" class="btn btn-primary">Ver Tablas</a>
 			</div>
 		</div>
 		<div class="card" style="width: 18rem;">
-			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<img src="OtrasSemillas.jpg" class="card-img-top" alt="...">
 			<div class="card-body">
-				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
-				<a href="#" class="btn btn-primary">Ver Tablas</a>
-			</div>
-		</div>
-
-		<div class="card" style="width: 18rem;">
-			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
-			<div class="card-body">
-				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
-				<a href="#" class="btn btn-primary">Ver Tablas</a>
-			</div>
-		</div>
-		<div class="card" style="width: 18rem;">
-			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
-			<div class="card-body">
-				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
-				<a href="#" class="btn btn-primary">Ver Tablas</a>
+				<h5 class="card-title">Otras Semillas</h5>
+				<a href="OtrasSemillas.html" class="btn btn-primary">Ver Tablas</a>
 			</div>
 		</div>
 
 		<div class="card" style="width: 18rem;">
-			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<img src="Algas.jpg" class="card-img-top" alt="...">
 			<div class="card-body">
-				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
-				<a href="#" class="btn btn-primary">Ver Tablas</a>
+				<h5 class="card-title">Algas Y Hongos</h5>
+				<a href="AlgasYHongos.html" class="btn btn-primary">Ver Tablas</a>
 			</div>
 		</div>
 		<div class="card" style="width: 18rem;">
-			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<img src="Frutas.jpg" class="card-img-top" alt="...">
 			<div class="card-body">
-				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
-				<a href="#" class="btn btn-primary">Ver Tablas</a>
-			</div>
-		</div>
-
-		<div class="card" style="width: 18rem;">
-			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
-			<div class="card-body">
-				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
-				<a href="#" class="btn btn-primary">Ver Tablas</a>
-			</div>
-		</div>
-		<div class="card" style="width: 18rem;">
-			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
-			<div class="card-body">
-				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
-				<a href="#" class="btn btn-primary">Ver Tablas</a>
+				<h5 class="card-title">Frutas</h5>
+				<a href="Frutas.html" class="btn btn-primary">Ver Tablas</a>
 			</div>
 		</div>
 
 		<div class="card" style="width: 18rem;">
-			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<img src="Verduras.jpg" class="card-img-top" alt="...">
 			<div class="card-body">
-				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
-				<a href="#" class="btn btn-primary">Ver Tablas</a>
+				<h5 class="card-title">Verduras</h5>
+				<a href="Verduras.html" class="btn btn-primary">Ver Tablas</a>
 			</div>
 		</div>
 		<div class="card" style="width: 18rem;">
-			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<img src="TuberculosBulbosYRaices.jpg" class="card-img-top" alt="...">
 			<div class="card-body">
-				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
-				<a href="#" class="btn btn-primary">Ver Tablas</a>
-			</div>
-		</div>
-
-		<div class="card" style="width: 18rem;">
-			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
-			<div class="card-body">
-				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
-				<a href="#" class="btn btn-primary">Ver Tablas</a>
-			</div>
-		</div>
-		<div class="card" style="width: 18rem;">
-			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
-			<div class="card-body">
-				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
-				<a href="#" class="btn btn-primary">Ver Tablas</a>
+				<h5 class="card-title">Tuberculos, Bulbos y Raices</h5>
+				<a href="TuberculosBulbosYRaices.html" class="btn btn-primary">Ver Tablas</a>
 			</div>
 		</div>
 
 		<div class="card" style="width: 18rem;">
-			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<img src="LecheYDerivados.jpg" class="card-img-top" alt="...">
 			<div class="card-body">
-				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
-				<a href="#" class="btn btn-primary">Ver Tablas</a>
+				<h5 class="card-title">Leche y Derivados</h5>
+				<a href="LecheYDerivados.html" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+		<div class="card" style="width: 18rem;">
+			<img src="Huevo.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Huevo de Aves-Reptiles</h5>
+				<a href="HuevoAves-Reptiles.html" class="btn btn-primary">Ver Tablas</a>
 			</div>
 		</div>
 
 		<div class="card" style="width: 18rem;">
-			<img src="C:/Users/Cuemi/Pictures/SemillasDeCereales.jpg" class="card-img-top" alt="...">
+			<img src="Carnes.jpg" class="card-img-top" alt="...">
 			<div class="card-body">
-				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
-				<a href="#" class="btn btn-primary">Ver Tablas</a>
+				<h5 class="card-title">Carnes, Visceras y Derivados</h5>
+				<a href="CarnesViscerasYDerivados.html" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+		<div class="card" style="width: 18rem;">
+			<img src="Pescados.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Pescados y Mariscos</h5>
+				<a href="PescadosYMariscos.html" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+
+		<div class="card" style="width: 18rem;">
+			<img src="Azucares.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Azucares, Mieles y Dulces</h5>
+				<a href="AzucaresMielesYDulces.html" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+		<div class="card" style="width: 18rem;">
+			<img src="AlimentosInfantiles.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Alimentos Infantiles</h5>
+				<a href="AlimentosInfantiles.html" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+
+		<div class="card" style="width: 18rem;">
+			<img src="Aderezo.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Aderezos</h5>
+				<a href="Aderezo.html" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+
+		<div class="card" style="width: 18rem;">
+			<img src="Bebidas.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Bebidas</h5>
+				<a href="Bebidas.html" class="btn btn-primary">Ver Tablas</a>
+			</div>
+		</div>
+
+		<div class="card" style="width: 18rem;">
+			<img src="Varios.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Varios</h5>
+				<a href="Varios.html" class="btn btn-primary">Ver Tablas</a>
 			</div>
 		</div>
 	</div>
