--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<img src="SemillasDeCereales.jpg" class="card-img-top" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">Semillas de Cereales y Derivados</h5>
-				<a href="SemillasDeCereales.html" class="btn btn-primary">Ver Tablas</a>
+				<a href="SemillasDeCerealesYDerivados.html" class="btn btn-primary">Ver Tablas</a>
 			</div>
 		</div>
 
